--- a/app/data/email/email-code.html
+++ b/app/data/email/email-code.html
@@ -12,8 +12,8 @@
     style="
       margin: 0;
       padding: 0;
-      background-color: #f3f4f6;
-      background-image: linear-gradient(135deg, #f9fafb 0%, #eef2ff 50%, #f3f4f6 100%);
+      background-color: #fef2f2;
+      background-image: linear-gradient(135deg, #fef2f2 0%, #fff1f2 30%, #fff7ed 60%, #fef2f2 100%);
       font-family:
         -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Roboto, &quot;Helvetica Neue&quot;,
         Arial, sans-serif;
@@ -25,7 +25,7 @@
       width="100%"
       cellpadding="0"
       cellspacing="0"
-      style="background-color: #f3f4f6"
+      style="background-color: #fef2f2"
     >
       <tr>
         <td align="center" style="padding: 48px 16px">
@@ -37,25 +37,19 @@
             style="max-width: 520px"
           >
             <tr>
-              <td align="center" style="padding-bottom: 28px">
+              <td align="center" style="padding-bottom: 40px">
                 <table role="presentation" cellpadding="0" cellspacing="0">
                   <tr>
                     <td
                       style="
-                        font-size: 22px;
+                        font-size: 24px;
                         font-weight: 700;
-                        color: #0f172a;
+                        color: #dc2626;
                         letter-spacing: -0.4px;
+                        line-height: 1.2;
                       "
                     >
-                      <span style="color: #dc2626">●</span> {{brandName}}
-                    </td>
-                  </tr>
-                  <tr>
-                    <td
-                      style="font-size: 13px; color: #6b7280; padding-top: 4px; text-align: center"
-                    >
-                      {{tagline}}
+                      {{brandName}}
                     </td>
                   </tr>
                 </table>
@@ -91,7 +85,7 @@
                             style="
                               height: 6px;
                               border-radius: 999px;
-                              background-image: linear-gradient(90deg, #ef4444, #f97316, #fbbf24);
+                              background-image: linear-gradient(90deg, #ff5555, #f43f5e, #f59e0b);
                               text-indent: -9999px;
                             "
                           >
@@ -102,37 +96,21 @@
                     </td>
                   </tr>
                   <tr>
-                    <td style="padding: 36px 32px 32px">
-                      <p
-                        style="
-                          margin: 0 0 10px;
-                          display: inline-block;
-                          padding: 6px 12px;
-                          background-color: #fef2f2;
-                          color: #b91c1c;
-                          font-size: 12px;
-                          font-weight: 700;
-                          letter-spacing: 0.4px;
-                          text-transform: uppercase;
-                          border-radius: 999px;
-                        "
-                      >
-                        {{codeLabel}}
-                      </p>
+                    <td style="padding: 40px 32px 32px">
                       <h1
                         style="
-                          margin: 0 0 10px;
-                          font-size: 24px;
+                          margin: 0 0 12px;
+                          font-size: 26px;
                           font-weight: 700;
-                          line-height: 1.35;
+                          line-height: 1.3;
                           color: #0f172a;
-                          letter-spacing: -0.2px;
+                          letter-spacing: -0.3px;
                         "
                       >
                         {{title}}
                       </h1>
                       <p
-                        style="margin: 0 0 18px; font-size: 15px; line-height: 1.6; color: #475467"
+                        style="margin: 0 0 32px; font-size: 15px; line-height: 1.6; color: #64748b"
                       >
                         {{subtitle}}
                       </p>
@@ -144,33 +122,25 @@
                               cellpadding="0"
                               cellspacing="0"
                               style="
-                                background-color: #0f172a;
-                                border: 1px solid #e5e7eb;
-                                border-radius: 14px;
+                                background: linear-gradient(135deg, #dc2626 0%, #f43f5e 100%);
+                                border-radius: 12px;
                                 overflow: hidden;
+                                box-shadow: 0 4px 12px rgba(220, 38, 38, 0.3);
                               "
                             >
                               <tr>
-                                <td
-                                  style="
-                                    padding: 22px 32px;
-                                    background: linear-gradient(
-                                      90deg,
-                                      rgba(255, 255, 255, 0.04),
-                                      rgba(255, 255, 255, 0.12)
-                                    );
-                                  "
-                                >
+                                <td style="padding: 28px 40px">
                                   <span
                                     style="
                                       display: inline-block;
-                                      font-size: 38px;
-                                      font-weight: 800;
-                                      letter-spacing: 10px;
-                                      color: #fef2f2;
-                                      font-family: &quot;Courier New&quot;, Courier, monospace;
+                                      font-size: 42px;
+                                      font-weight: 700;
+                                      letter-spacing: 8px;
+                                      color: #ffffff;
+                                      font-family: &quot;SF Mono&quot;, &quot;Monaco&quot;, &quot;Inconsolata&quot;, &quot;Roboto Mono&quot;, &quot;Courier New&quot;, Courier, monospace;
+                                      line-height: 1;
                                     "
-                                    >{{code}}</span
+                                    >{{formattedCode}}</span
                                   >
                                 </td>
                               </tr>
@@ -180,10 +150,10 @@
                       </table>
                       <p
                         style="
-                          margin: 22px 0 0;
+                          margin: 24px 0 0;
                           font-size: 14px;
                           line-height: 1.5;
-                          color: #6b7280;
+                          color: #64748b;
                           text-align: center;
                         "
                       >
@@ -199,14 +169,22 @@
                         cellpadding="0"
                         cellspacing="0"
                         style="
-                          background-color: #fff7ed;
-                          border-radius: 10px;
-                          border: 1px solid #fed7aa;
+                          background-color: #fef2f2;
+                          border-radius: 8px;
+                          border: 1px solid #fca5a5;
                         "
                       >
                         <tr>
-                          <td style="padding: 12px 16px">
-                            <p style="margin: 0; font-size: 13px; line-height: 1.6; color: #9a3412">
+                          <td style="padding: 14px 16px">
+                            <p
+                              style="
+                                margin: 0;
+                                font-size: 13px;
+                                line-height: 1.6;
+                                color: #991b1b;
+                                text-align: center;
+                              "
+                            >
                               {{securityTip}}
                             </p>
                           </td>
@@ -221,10 +199,10 @@
               <td style="padding: 32px 16px 0">
                 <p
                   style="
-                    margin: 0 0 8px;
+                    margin: 0 0 20px;
                     font-size: 13px;
-                    line-height: 1.5;
-                    color: #9ca3af;
+                    line-height: 1.6;
+                    color: #64748b;
                     text-align: center;
                   "
                 >
@@ -235,11 +213,11 @@
                     margin: 0;
                     font-size: 12px;
                     line-height: 1.5;
-                    color: #cbd5e1;
+                    color: #94a3b8;
                     text-align: center;
                   "
                 >
-                  © {{footer}} · {{tagline}}
+                  {{footer}}
                 </p>
               </td>
             </tr>
